third_party/rust/thiserror/v1/crate/tests/ui/duplicate-fmt.stderr
error: only one #[error(...)] attribute is allowed
 --> tests/ui/duplicate-fmt.rs:5:1
  |
5 | #[error("...")]
  | ^^^^^^^^^^^^^^^
